--- a/linear regression.ipynb
+++ b/linear regression.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false
    },
@@ -230,23 +230,46 @@
    "source": [
     "from sklearn import datasets, linear_model\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.linear_model import RidgeCV, Ridge, LassoCV, Lasso"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 144,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df=pd.read_csv('D:/math/book/data mining/ML/dataset/CCPP/Folds5x2_pp.csv')\n",
+    "x = df[['AT', 'V', 'AP', 'RH']]\n",
+    "y = df[['PE']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "dataMat_train, dataMat_test, label_train, label_test = train_test_split(dataMat, label, test_size=0.25, random_state=42)"
+    "def linear_regression(x,y):\n",
+    "    dataMat_train, dataMat_test, label_train, label_test = train_test_split(x, y, test_size=0.25, random_state=42)\n",
+    "    \n",
+    "    linreg = linear_model.LinearRegression(fit_intercept =True) #We do not fit intercept becasue the first column of dataMat is 1\n",
+    "    linreg.fit(dataMat_train,label_train)\n",
+    "    print(linreg.coef_)\n",
+    "    \n",
+    "    label_pred = linreg.predict(dataMat_test)\n",
+    "    mse = mean_squared_error(label_test, label_pred)\n",
+    "    print(mse)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 155,
    "metadata": {
     "collapsed": false
    },
@@ -255,69 +278,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(150L, 2L)\n",
-      "(50L, 2L)\n",
-      "(150L,)\n",
-      "(50L,)\n"
+      "[[-1.97852801 -0.23403882  0.05833255 -0.15906102]]\n",
+      "20.0714469653\n"
      ]
     }
    ],
    "source": [
-    "print(dataMat_train.shape)\n",
-    "print(dataMat_test.shape)\n",
-    "print(label_train.shape)\n",
-    "print(label_test.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 3.01280483  1.68897102]\n"
-     ]
-    }
-   ],
-   "source": [
-    "linreg = linear_model.LinearRegression(fit_intercept =False) #We do not fit intercept becasue the first column of dataMat is 1\n",
-    "linreg.fit(dataMat_train,label_train)\n",
-    "print(linreg.coef_)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here, we got $\\hat\\beta_0=3.01280483$ and $\\hat\\beta_1=1.68897102$. Then we evaulate the model by using the test data. We calculate MSE to see the performance of linear regression and its value is 0.006. Seems we got a pretty good prediction."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0066162549700217134"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "label_pred = linreg.predict(dataMat_test)\n",
-    "mean_squared_error(label_test, label_pred)"
+    "linear_regression(x,y)"
    ]
   },
   {
@@ -360,10 +327,102 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 184,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "def ridge_regression(x,y):\n",
+    "    dataMat_train, dataMat_test, label_train, label_test = train_test_split(x, y, test_size=0.25, random_state=42)\n",
+    "    \n",
+    "    #select the value of parameter by cross validation.\n",
+    "    alpha_Mat= np.logspace(-10,10,10)\n",
+    "    ridgecv = RidgeCV(alphas=alpha_Mat, fit_intercept=True,cv=10)\n",
+    "    ridgecv.fit(dataMat_train, label_train)\n",
+    "    \n",
+    "    ridge = Ridge(alpha=ridgecv.alpha_,fit_intercept=True)\n",
+    "    ridge.fit(dataMat_train,label_train)\n",
+    "    print(ridgecv.alpha_)\n",
+    "    \n",
+    "    return ridge.coef_ , mean_squared_error(label_test, ridge.predict(dataMat_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.9154966501\n",
+      "[[-1.9781638  -0.23417727  0.05842311 -0.15899963]]\n",
+      "20.0714198433\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b=ridge_regression(x,y)\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def lasso_regression(x,y):\n",
+    "    dataMat_train, dataMat_test, label_train, label_test = train_test_split(x, y, test_size=0.25, random_state=42)\n",
+    "    \n",
+    "    alpha_Mat= np.logspace(-10,10,10)\n",
+    "    lassocv=LassoCV(alphas=alpha_Mat,fit_intercept=True,cv=10)\n",
+    "    lassocv.fit(dataMat_train, label_train)\n",
+    "    \n",
+    "    lasso=Lasso(alpha=lassocv.alpha_,fit_intercept=True)\n",
+    "    lasso.fit(dataMat_train,label_train)\n",
+    "    print(lassocv.alpha_)\n",
+    "    return lasso.coef_, mean_squared_error(label_test, lasso.predict(dataMat_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.000464158883361\n",
+      "[-1.97858225 -0.23401902  0.05830488 -0.15906742]\n",
+      "20.07145931\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b=lasso_regression(x,y)\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": []
   },
   {
