Update Linear methods for classification——Logistic Regression.ipynb

--- a/Linear methods for classification——Logistic Regression.ipynb
+++ b/Linear methods for classification——Logistic Regression.ipynb
@@ -97,7 +97,7 @@
     }
    ],
    "source": [
-    "df=pd.read_csv('D:/math/book/data mining/ML/machinelearninginaction/Ch06/testSetRBF2.txt',sep='\\t',header=None)\n",
+    "df=pd.read_csv('../testSetRBF2.txt',sep='\\t',header=None)\n",
     "x=df.iloc[:,0:2]\n",
     "y=df.iloc[:,2]\n",
     "score1,cm1 = logistic_regression(x,y)\n",
