--- a/linear regression.ipynb
+++ b/linear regression.ipynb
@@ -123,7 +123,7 @@
     }
    ],
    "source": [
-    "df=pd.read_csv('D:/math/book/data mining/ML/machinelearninginaction/Ch08/ex0.txt', sep='\\t',header=None)\n",
+    "df=pd.read_csv('../ex0.txt', sep='\\t',header=None)\n",
     "df.head()"
    ]
   },
@@ -242,7 +242,7 @@
    },
    "outputs": [],
    "source": [
-    "df=pd.read_csv('D:/math/book/data mining/ML/dataset/CCPP/Folds5x2_pp.csv')\n",
+    "df=pd.read_csv('../Folds5x2_pp.csv')\n",
     "x = df[['AT', 'V', 'AP', 'RH']]\n",
     "y = df[['PE']]\n"
    ]
