--- a/Kmean.ipynb
+++ b/Kmean.ipynb
@@ -24,9 +24,7 @@
     "\n",
     "Since we do not have reponses for our dataset, how to choose the number of clusters?\n",
     "\n",
-    "In general, we can use the elbow method to determine K.\n",
-    "\n",
-    "But this method is not useful sometimes, we may depend on the \n",
+    "In general, we can use the elbow method to determine K. But this method is not useful sometimes, we may evaluate Kmeans based on a metric for how well it performs for that later purpose.\n",
     "\n",
     "\n"
    ]
